--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <!-- third text section -->
-    <section class="section section-dark">
+    <section class="section section-light">
       <h2>Third Section</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem assumenda corporis, soluta, tempora et quas mollitia nemo delectus! Velit, architecto eos ad. Molestias odit voluptatem aliquid, animi, sint voluptas nemo!</p>
     </section>
