added final code

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-  <div>
     <!-- first image section -->
     <div class="pimg1">
-      <div class="ptext">
+      <div class="ptext1">
         <span class="pborder">
             Paralax Website
           </span>
@@ -29,7 +28,7 @@
     <!-- second image section -->
     <div class="pimg2">
       <div class="ptext">
-        <span class="pborder">
+        <span class="pborder trans">
             Second Image Section
           </span>
       </div>
@@ -44,7 +43,7 @@
     <!-- third image section -->
     <div class="pimg3">
       <div class="ptext">
-        <span class="pborder">
+        <span class="pborder trans">
             Third Image Section
           </span>
       </div>
@@ -54,8 +53,6 @@
       <h2>Third Section</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem assumenda corporis, soluta, tempora et quas mollitia nemo delectus! Velit, architecto eos ad. Molestias odit voluptatem aliquid, animi, sint voluptas nemo!</p>
     </section>
-
-  </div>
 </body>
 
 </html>
